# pszt-magazyn

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  main.cpp
src/: RandDouble.h  RandInt.h  main.cpp  userwindow.cpp
src/model/: Creature.cpp  Creature.h  Population.cpp  Population.h  Product.cpp  Product.h  RandDouble.h  RandInt.h  algorithm.cpp  algorithm.cpp.autosave  algorithm.h
src/view/: userwindow.cpp  userwindow.h  userwindow.ui
tests/: main.cc  test_Creature.cpp  test_Product.cc  test_RandDouble.cc  test_RandInt.cc
